syntax = "proto3";

package app.v1.auth;

import "buf/validate/validate.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/eliofery/golang-grpc/pkg/api/app/v1/auth";

message SignInRequest {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      title: "SignInRequest"
      description: "User authorization request"
    }
  };

  string email = 1 [
    (buf.validate.field).string.email = true,
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      title: "Email"
      description: "User email"
    }
  ];

  string password = 4 [
    (buf.validate.field) = {
      required: true,
      cel: {
        id: "password",
        message: "must be 8 - 72 characters long and only contain letters and digits",
        expression: "this.matches('^[-_ A-Za-z0-9]{8,72}$')"
      }
    },
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      title: "Password"
      description: "User password must be 8 - 72 characters long and only contain letters and digits"
      pattern: "^[-_ A-Za-z0-9]{8,72}$"
      min_length: 8
      max_length: 72
    }
  ];
}
